Linked CSS to HTML

--- a/Dessert Central.html
+++ b/Dessert Central.html
@@ -3,12 +3,12 @@
 <head>
   <meta charset="UTF-8">
   <title>Dessert Central </title>
+  <link rel="stylesheet" href="Dessert%20Style.css">
 </head>
 <body>
   <header>
-   <nav>
-
-     <ul>
+   <nav class="navtop">
+     <ul class="navtop">
         <li> Find Location
        </li>
         <li> Order Now
